# AgribankV3

./: .gitignore  AgribankV3.spec  AgribankV3UpdateBuilder.spec  HuongDanTaoBanCapNhat.md  README.md  build_portable.ps1  build_update_builder.ps1  pyproject.toml  run.ps1
src/agribank_v3/: __init__.py  __main__.py  app.py  excel_tools.py  file_merge.py  printer_manager.py  runtime_paths.py  settings.py  word_folder_print.py
src/agribank_v3/excel/: __init__.py  compatibility.py  launcher.py  service.py
src/agribank_v3/features/: __init__.py  catalog.py
src/agribank_v3/quiz/: __init__.py  database.py  excel_exporter.py  excel_importer.py  models.py  session.py
src/agribank_v3/settlement/: __init__.py  consolidation1314_worker.py  consolidation13_worker.py  consolidation15a_worker.py  consolidation15b_worker.py  consolidation16_worker.py  consolidation18_worker.py  engine.py  mau30_worker.py  models.py  registry.py  transforms.py
src/agribank_v3/ui/: icons.py  settings.py  (+3 more)
templates/tovayvon/: DeNghiThanhToan.docx
tests/: test_credit_tovayvon.py  test_db_schema_diff.py  test_excel_launcher.py  test_excel_service.py  test_excel_tools.py  test_printer_manager.py  test_quiz.py  test_settings.py  test_settlement.py  test_update_builder.py  test_update_flow_end_to_end.py  test_update_manager.py
tools/: build_quiz_template.mjs  diagnose_excel.py  inspect_quiz_export.mjs
tools/update_builder/: README.md  __init__.py  build_config.json  db_schema_diff.py  run_update_flow_demo.py  update_builder_app.py  update_builder_core.py  update_builder_ui.py  update_manifest.py
(+62 files in other folders)
