[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agribank-v3"
version = "0.1.0"
description = "AgribankV3 desktop application"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1,<4",
    "PySide6>=6.8,<7",
    "pywin32>=306",
]

[project.scripts]
agribank-v3 = "agribank_v3.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agribank_v3 = [
    "resources/icons/*.png",
    "resources/icons/*.svg",
    "resources/templates/*.xlsx",
]
